--- a/package.json
+++ b/package.json
@@ -56,7 +56,13 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.5.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
     "loader.js": "^4.0.10",
+    "prettier": "^1.4.4",
     "typescript": "^2.1.0"
   },
   "peerDependencies": {
